[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Guns/Uzi.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Guns/UziBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/CurAmmoFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Sprites/World/WhiteSquare.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/PlayerCamoNoGun.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=9]
[ext_resource path="res://MusicSounds/Sounds/GunShotSnglShotIn PE1097906.mp3" type="AudioStream" id=10]
[ext_resource path="res://MusicSounds/Sounds/pistol-cockwav-6014.mp3" type="AudioStream" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 17.0
height = 42.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 13.0

[sub_resource type="CircleShape2D" id=3]
radius = 44.0114

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_stop_reload"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Guns:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -6, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 10, 0, 0 )
initial_velocity = 8.0
angular_velocity = 68.57
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
color = Color( 1, 0.733333, 0, 1 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_layer = 2
collision_mask = 104
script = ExtResource( 9 )
_uzi_bullet = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 17.2613, 5.88628 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 8 )
hframes = 3

[node name="Guns" type="Node2D" parent="."]

[node name="Uzi" parent="Guns" instance=ExtResource( 1 )]
position = Vector2( 48, 6 )
vframes = 4
script = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 12, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( 16, 0 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
visible = false
position = Vector2( -6.13508, 2.67571 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Invincibility" type="Timer" parent="HurtBox"]
one_shot = true

[node name="ItemPickup" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemPickup"]
visible = false
position = Vector2( 8, 0 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="PressE" type="Label" parent="ItemPickup"]
visible = false
margin_left = -101.0
margin_top = -103.0
margin_right = 119.0
margin_bottom = -39.0
custom_fonts/font = ExtResource( 6 )
text = "Press E"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/reload = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -1.19209e-07, 0 )
current = true
process_mode = 0
smoothing_enabled = true
smoothing_speed = 3.0
__meta__ = {
"_edit_lock_": true
}

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="MuzzleFlash" type="Particles2D" parent="."]
emitting = false
amount = 13
lifetime = 0.5
one_shot = true
speed_scale = 10.28
explosiveness = 0.09
randomness = 0.25
process_material = SubResource( 6 )
texture = ExtResource( 7 )

[node name="GunShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -10.111
bus = "Sound"

[node name="ReloadSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -7.222
bus = "Sound"

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered" flags=3]
[connection signal="timeout" from="HurtBox/Invincibility" to="." method="_on_invincibility_timeout" flags=3]
[connection signal="area_entered" from="ItemPickup" to="." method="_on_item_pickup_area_entered"]
[connection signal="area_exited" from="ItemPickup" to="." method="_on_item_pickup_area_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
